# src/routers/endpoints.js
@@ -9,15 +9,15 @@ module.exports.name = 'endpoints'
 module.exports.dependencies = [
   'AdminController',
   'AdminValidations',
-  'StudentController',
-  'StudentValidations',
+  'ApplicantController',
+  'ApplicantValidations',
   'MiscValidations'
 ]
 module.exports.factory = (
   AdminController,
   AdminValidations,
-  StudentController,
-  StudentValidations,
+  ApplicantController,
+  ApplicantValidations,
   MiscValidations
 ) => {
   /**
@@ -32,21 +32,21 @@ module.exports.factory = (
       route: 'enroll',
       methods: ['post'],
       middlewares: {
-        post: [StudentValidations.enroll, StudentController.insert]
+        post: [ApplicantValidations.enroll, ApplicantController.insert]
       }
     },
     {
       route: 'auth',
       methods: ['post'],
       middlewares: {
-        post: [StudentValidations.auth, StudentController.auth]
+        post: [ApplicantValidations.auth, ApplicantController.auth]
       }
     },
     {
-      route: 'otp-verification',
+      route: 'verify-otp',
       methods: ['post'],
       middlewares: {
-        post: [StudentValidations.otpVerification, StudentController.otpVerification]
+        post: [ApplicantValidations.verifyOTP, ApplicantController.verifyOTP]
       }
     },
     // #endregion
@@ -62,30 +62,30 @@ module.exports.factory = (
     {
       route: 'create',
       methods: ['post'],
-      guard: true,
-      guardType: 'admin',
+      // guard: true,
+      // guardType: 'admin',
       middlewares: {
         post: [AdminValidations.create, AdminController.insert]
       }
     },
     {
-      route: 'students',
+      route: 'applicants',
       methods: ['get'],
       guard: true,
       guardType: 'admin',
       middlewares: {
-        get: [StudentValidations.querySearch, StudentController.get]
+        get: [ApplicantValidations.querySearch, ApplicantController.get]
       }
     },
     {
-      route: 'students/:id',
+      route: 'applicants/:id',
       methods: ['get', 'patch', 'delete'],
       guard: true,
       guardType: 'admin',
       middlewares: {
-        get: [MiscValidations.id, StudentController.getById],
-        patch: [MiscValidations.id, StudentController.update],
-        delete: [MiscValidations.id, StudentController.delete]
+        get: [MiscValidations.id, ApplicantController.getById],
+        patch: [MiscValidations.id, ApplicantController.update],
+        delete: [MiscValidations.id, ApplicantController.delete]
       }
     }
     // #endregion
